# iced_aw

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  tarpaulin.toml
.github/workflows/: clippy.yml  format.yml  rustdoc.yml  test.yml
examples/: badge.rs  card.rs  color_picker.rs  context_menu.rs  custom_layout.rs  date_picker.rs  drop_down.rs  drop_down_test.rs  dropdown_pos.rs  grid.rs  labeled_frame.rs  menu.rs  menu_test.rs  number_input.rs  selection_list.rs  slide_bar.rs  spinner.rs  tab_bar.rs  tabs_noshow.rs  time_picker.rs  typed_input.rs  wrap.rs
examples/WidgetIDReturn/: Cargo.toml
examples/WidgetIDReturn/src/: main.rs  numberinput.rs
examples/badge/: Cargo.toml
examples/badge/src/: main.rs
examples/card/: Cargo.toml
examples/card/src/: main.rs
examples/color_picker/: Cargo.toml
examples/color_picker/src/: main.rs
examples/context_menu/: Cargo.toml
examples/context_menu/src/: main.rs
examples/cupertino/cupertino_spinner/: Cargo.toml  Makefile  README.md
examples/cupertino/cupertino_spinner/src/: main.rs
examples/date_picker/: Cargo.toml
examples/drop_down/: Cargo.toml
examples/floating_button/: Cargo.toml
examples/floating_button/src/: main.rs
examples/floating_element/: Cargo.toml
examples/floating_element multioverlay/: Cargo.toml
examples/floating_element/src/: main.rs
examples/floating_element_anchors/: Cargo.toml
examples/font_loading/: Cargo.toml
examples/grid/: Cargo.toml
examples/grid/src/: main.rs
examples/input_style/: Cargo.toml
examples/menu/: Cargo.toml
examples/modal/: Cargo.toml
examples/modal/src/: main.rs
examples/modal_component/: Cargo.toml
examples/modal_component/src/: main.rs
examples/multiple_modals/: Cargo.toml
examples/multiple_modals/src/: main.rs
examples/number_input/: Cargo.toml
examples/number_input/src/: main.rs
examples/pure/number_input/: Cargo.toml
examples/pure/number_input/src/: main.rs
examples/pure/selection_list/: Cargo.toml
examples/pure/selection_list/src/: main.rs
examples/pure/wrap/: Cargo.toml
examples/pure/wrap/src/: main.rs
examples/segmented_button/: Cargo.toml
examples/selection_list/: Cargo.toml
examples/selection_list/src/: main.rs
examples/side_bar/: counter.rs  ferris.rs  login.rs  main.rs  settings.rs
examples/sidebar/: Cargo.toml
examples/sidebar/src/: ferris.rs  main.rs  settings.rs
examples/sliderbar/: Cargo.toml
examples/sliderbar/src/: main.rs
examples/spinner/: Cargo.toml
examples/split/: Cargo.toml
examples/split/src/: main.rs
examples/split_scroller/: Cargo.toml
examples/tab_bar/: Cargo.toml
examples/tab_bar/src/: main.rs
examples/tabs/: Cargo.toml  counter.rs  ferris.rs  login.rs  main.rs  settings.rs
examples/tabs/src/: counter.rs  ferris.rs  login.rs  main v1.rs  main.rs  settings.rs  theme v1.rs  theme.rs
examples/tabs_min/: Cargo.toml
examples/tabs_min/src/: main.rs
examples/time_picker/: Cargo.toml
examples/time_picker/src/: main.rs
examples/typed_input/: Cargo.toml
examples/typed_input/src/: main.rs
examples/web/: Cargo.toml  Makefile  index.html
examples/web/src/: badge_section.rs  card_section.rs  color_picker_section.rs  date_picker_section.rs  floating_button_section.rs  main.rs  modal_section.rs  picklist_section.rs  time_picker_section.rs
examples/widget_id_return/: main.rs  numberinput.rs
examples/wrap/: Cargo.toml
examples/wrap/src/: main.rs
src/: core.rs  lib.rs  style.rs  widget.rs  widgets.rs
src/core/: alignment.rs  clock.rs  color.rs  date.rs  icons.rs  menu.rs  mod.rs  offset.rs  overlay.rs  renderer.rs  time.rs
src/graphics/: badge.rs  card.rs  color_picker.rs  date_picker.rs  floating_button.rs  floating_element.rs  grid.rs  icon_text.rs  icons.rs  menu.rs  mod.rs  modal.rs  number_input.rs  selection_list.rs  spinner.rs  split.rs  tab_bar.rs  tabs.rs  time_picker.rs  wrap.rs
src/native/: badge.rs  card.rs  color_picker.rs  common.rs  context_menu.rs  date_picker.rs  drop_down.rs  floating_button.rs  floating_element.rs  grid.rs  helpers.rs  icon_text.rs  menu.rs  mod.rs  modal.rs  number_input.rs  quad.rs  segmented_button.rs  selection_list.rs  slide_bar.rs  spinner.rs  split.rs  tab_bar.rs  tabs.rs  time_picker.rs  wrap.rs
src/pure/: badge.rs  card.rs  color_picker.rs  date_picker.rs  floating_element.rs  grid.rs  icon_text.rs  mod.rs  modal.rs  number_input.rs  selection_list.rs  split.rs  tab_bar.rs  tabs.rs  time_picker.rs  wrap.rs
src/style/: badge.rs  button.rs  card.rs  color_picker.rs  colors.rs  context_menu.rs  date_picker.rs  input_style.rs  menu.rs  menu_bar.rs  mod.rs  modal.rs  number_input.rs  segmented_button.rs  selection_list.rs  sidebar.rs  spinner.rs  split.rs  status.rs  style_state.rs  tab_bar.rs  time_picker.rs
src/web/: badge.rs  card.rs  color_picker.rs  date_picker.rs  floating_button.rs  grid.rs  mod.rs  modal.rs  tab_bar.rs  tabs.rs  time_picker.rs
src/widget/: badge.rs  card.rs  color_picker.rs  common.rs  context_menu.rs  custom_layout.rs  date_picker.rs  drop_down.rs  helpers.rs  labeled_frame.rs  menu.rs  menu_button.rs  number_input.rs  quad.rs  selection_list.rs  sidebar.rs  slide_bar.rs  spinner.rs  tab_bar.rs  tabs.rs  time_picker.rs  typed_input.rs  wrap.rs
src/widgets/: badge.rs  card.rs  color_picker.rs  context_menu.rs  (+19 more)
tests/: README.md  badge_integration_tests.rs  card_integration_tests.rs  color_picker_integration_tests.rs  context_menu_integration_tests.rs  context_menu_integration_tests.rs.bak  custom_layout_integration_tests.rs  date_picker_integration_tests.rs  date_picker_integration_tests.rs.bak  drop_down_integration_tests.rs  drop_down_integration_tests.rs.bak  icon_test.rs  menu_bar_integration_tests.rs  menu_button_integration_tests.rs  number_input_integration_tests.rs  selection_list_integration_tests.rs  sidebar_integration_tests.rs  slide_bar_integration_tests.rs  tab_bar_integration_tests.rs  time_picker_integration_tests.rs  time_picker_integration_tests.rs.bak  typed_input_integration_tests.rs  wrap_integration_tests.rs
(+192 files in other folders)
