[package]
name = "iced_aw"
version = "0.12.2"
authors = [
    "Kaiden42 <gitlab@tinysn.com>",
    "Andrew Wheeler <genusistimelord@gmail.com>",
]
edition = "2021"
description = "Additional widgets for the Iced GUI library"
license = "MIT"
homepage = "https://iced.rs"
repository = "https://github.com/iced-rs/iced_aw"
readme = "README.md"
keywords = ["gui", "graphics", "interface", "widgets", "iced"]
categories = ["gui"]
rust-version = "1.80"

[features]
badge = []
card = []
date_picker = ["chrono"]
color_picker = ["iced/canvas"]
grid = ["itertools"]
glow = []                                                   # TODO
tab_bar = []
tabs = ["tab_bar"]
time_picker = ["chrono", "iced/canvas"]
wrap = []
number_input = ["num-format", "num-traits", "typed_input"]
typed_input = []
selection_list = []
menu = []
quad = []
spinner = []
context_menu = []
slide_bar = []
drop_down = []
sidebar = []

default = [
    "badge",
    "card",
    "number_input",
    "date_picker",
    "color_picker",
    "grid",
    "tab_bar",
    "tabs",
    "time_picker",
    "slide_bar",
    "wrap",
    "selection_list",
    "quad",
    "context_menu",
    "spinner",
    "drop_down",
    "menu",
    "sidebar",
]

[dependencies]
cfg-if = "1.0"
chrono = { version = "0.4.39", optional = true, features = ["wasmbind"] }
iced_fonts = "0.1.1"
itertools = { version = "0.14.0", optional = true }
num-format = { version = "0.4.4", optional = true }
num-traits = { version = "0.2.19", optional = true }
web-time = "1.1.0"

[dependencies.iced]
#git = "https://github.com/iced-rs/iced.git"
#rev = "b474a2b7a763dcde6a377cb409001a7b5285ee8d"
version = "0.13.1"
default-features = false
features = ["advanced"]

[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
num-traits = "0.2.19"   # For widget_id_return example
rand = "0.9.0"            # For wrap example
getrandom = { version = "0.3.1", features = ["wasm_js"]}

[dev-dependencies.iced]
#git = "https://github.com/iced-rs/iced.git"
#rev = "b474a2b7a763dcde6a377cb409001a7b5285ee8d"
version = "0.13.0"
#default-features = false
features = ["advanced", "wgpu"]

[dev-dependencies.iced_aw]
path = "./"
default-features = false

[[example]]
name = "badge"
required-features = ["badge"]

[[example]]
name = "card"
required-features = ["card"]

[[example]]
name = "color_picker"
required-features = ["color_picker"]

[[example]]
name = "date_picker"
required-features = ["date_picker"]

[[example]]
name = "grid"
required-features = ["grid"]

[[example]]
name = "menu"
required-features = ["menu"]

[[example]]
name = "number_input"
required-features = ["number_input"]

[[example]]
name = "selection_list"
required-features = ["selection_list"]

[[example]]
name = "side_bar"
required-features = ["sidebar", "iced/image"]

[[example]]
name = "slide_bar"
required-features = ["slide_bar"]

[[example]]
name = "spinner"
required-features = ["spinner"]

[[example]]
name = "tab_bar"
required-features = ["tab_bar"]

[[example]]
name = "tabs"
required-features = ["tabs", "iced/image"]

[[example]]
name = "time_picker"
required-features = ["time_picker"]

[[example]]
name = "typed_input"
required-features = ["typed_input"]

[[example]]
name = "widget_id_return"
required-features = ["number_input"]

[[example]]
name = "wrap"
required-features = ["wrap", "number_input"]

[lib]
crate-type = ["cdylib", "rlib"]
