[package]
name = "widget_id"
version = "0.1.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { workspace = true, features = [
    "number_input",
    "icons",
] }
iced = { workspace = true, features = [
    "wgpu",
] }
num-traits = "0.2.16"
