[package]
name = "badge"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "af7cbf0" }
iced_aw = { path = "../..", default-features = false, features = [
    "badge",
    "colors",
] }
