[package]
name = "context_menu"
version = "0.1.0"
authors = ["wiiznokes <wiiznokes@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { workspace = true, features = [
    "context_menu",
] }
iced_lazy = "0.6"
iced.workspace = true