[package]
name = "floating_button"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced =  { git = "https://github.com/hecrj/iced", rev = "a74974a8e4d8afc72c33434a22df74c3582b78a8" }
iced_aw = { path = "../..", default-features = false, features = ["floating_button", "colors", "icons"] }