[package]
name = "grid"
version = "0.1.0"
authors = ["daxpedda <daxpedda@gmail.com>", "Luni-4 <luni-4@hotmail.it>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { path = "../..", default-features = false, features = ["grid"] }

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "8221794"
version = "0.4.2"