[package]
name = "grid"
version = "0.1.0"
authors = ["Alexander van Saase <avsaase [at] gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { workspace = true, features = ["grid"] }
iced.workspace = true
