[package]
name = "modal"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3"
iced_aw = { path = "../..", default-features = false, features = ["card", "colors", "modal"] }
