[package]
name = "modal_component"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { workspace = true, features = [
    "card",
    "modal",
] }
iced_lazy = "0.6"
iced.workspace = true