[package]
name = "multiple_modals"
version = "0.1.0"
authors = ["Luca Trevisani <lucatrv@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { workspace = true, features = ["card", "modal", "icons"] }
iced.workspace = true
