[package]
name = "number_input"
version = "0.1.0"
authors = ["leang27 <52003343+leang27@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { workspace = true, features = [
    "number_input",
    "icons",
] }
iced.workspace = true