[package]
name = "selection_list"
version = "0.1.0"
authors = [
    "Héctor Ramón Jiménez <hector0193@gmail.com>",
    "Andrew Wheeler <genusistimelord@gmail.com>",
]
edition = "2021"
publish = false

[dependencies]
iced_aw = { path = "../..", default-features = false, features = [
    "selection_list",
] }

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "77800bc"
version = "0.4.2"