[package]
name = "selection_list"
version = "0.1.0"
authors = [
    "Héctor Ramón Jiménez <hector0193@gmail.com>",
    "Andrew Wheeler <genusistimelord@gmail.com>",
]
edition = "2021"
publish = false

[dependencies]
iced_aw = { workspace = true, features = [
    "selection_list",
] }
iced.workspace = true