[package]
name = "sidebar"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>", "Rizzen Yazston"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { workspace = true, features = ["sidebar", "icons"] }
iced = { workspace = true, features = [ "image"] }
