[package]
name = "split"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { path = "../..", default-features = false, features = ["split"] }

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
#branch = "generic-widget-tree"
#rev = "af7cbf0"
version = "0.4"
