[package]
name = "tab_bar"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git", rev = "adce9e0" }
iced_aw = { path = "../..", features = ["tab_bar"] }
