[package]
name = "tabs"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { path = "../..", features = ["tabs"] }

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "8221794"
version = "0.4.2"
features = [ "image"]