[package]
name = "typed_input"
version = "0.1.0"
authors = ["Ultraxime <36888699+Ultraxime@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { workspace = true, features = [
    "typed_input",
    "icons",
] }

iced.workspace=true
