[package]
name = "web"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git", rev = "adce9e0" }
#iced_web =  { git = "https://github.com/hecrj/iced", rev = "ea1a7248d257c7c9e4a1f3989e68b58a6bc0c4ff" }
iced_aw = { path = "../..", default-features = false, features = [
    "badge",
    "card",
    "color_picker",
    "colors",
    "date_picker",
    "floating_button",
    "modal",
    "time_picker",
] }
