[package]
name = "wrap"
version = "0.1.0"
authors = ["Downtime <yrainbxqc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#iced_web =  { git = "https://github.com/hecrj/iced", rev = "ea1a7248d257c7c9e4a1f3989e68b58a6bc0c4ff" }
iced_aw = { path = "../..", default-features = false, features = [
    "wrap",
    "number_input",
] }
rand = "0.8"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
#branch = "generic-widget-tree"
#rev = "af7cbf0"
version = "0.4"