[package]
name = "wrap"
version = "0.1.0"
authors = ["Downtime <yrainbxqc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { path = "../..", default-features = false, features = [
    "wrap",
    "number_input",
] }
rand = "0.8"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "8221794"
version = "0.4.2"
