[package]
name    = "cupertino-spinner"
version = "0.1.0"
authors = ["Brett Byler <bbyler@protonmail.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { workspace = true, features = ["canvas", "debug", "tokio"] }
iced_aw = { path = "../../../", features = ["cupertino"] }
tokio = { version = "1.27.0", features = ["time"] }

