[package]
name = "pure_number_input"
version = "0.1.0"
authors = ["leang27 <52003343+leang27@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { path = "../../..", default-features = false, features = [
    "number_input",
    "icons",
    "pure",
] }

[dependencies.iced]
#git = "https://github.com/iced-rs/iced.git"
#branch = "generic-widget-tree"
#rev = "af7cbf0"
version = "0.4"
features = ["pure"]