[package]
name = "pure_selection_list"
version = "0.1.0"
authors = [
    "Héctor Ramón Jiménez <hector0193@gmail.com>",
    "Andrew Wheeler <genusistimelord@gmail.com>",
]
edition = "2021"
publish = false

[dependencies]
iced_aw = { path = "../../..", default-features = false, features = [
    "selection_list",
    "pure"
] }

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "ba33e92818ec181508b4957d1eae5b2beb9ea221"
#branch = "generic-widget-tree"
#rev = "af7cbf0"
#version = "0.4"
features = ["pure"]