[package]
name = "pure_wrap"
version = "0.1.0"
authors = ["Downtime <yrainbxqc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { path = "../../..", default-features = false, features = [
    "wrap",
    "number_input",
    "pure"
] }
rand = "0.8"

[dependencies.iced]
#git = "https://github.com/iced-rs/iced.git"
#rev = "ba33e92818ec181508b4957d1eae5b2beb9ea221"
version = "0.4.2"
features = ["pure"]
